--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,6 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-
 platform = espressif32
 board = esp32dev
 framework = arduino
@@ -17,3 +16,4 @@ monitor_speed = 115200
 lib_deps = 
 	bblanchon/ArduinoJson@^6.21.3
 	earlephilhower/ESP8266Audio@^1.9.7
+	dfrobot/DFRobotDFPlayerMini@^1.0.6
