--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.3
 	earlephilhower/ESP8266Audio@^1.9.7
 	dfrobot/DFRobotDFPlayerMini@^1.0.6
+	gilmaimon/ArduinoWebsockets@^0.5.4
